# cpp-game-server-portfolio

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh  dev.py
examples/: CMakeLists.txt
examples/rock_paper_scissors_lizard_spock/: CMakeLists.txt  README.md  battle_service.cc  client.cc  common.h  lobby_service.cc  match_service.cc  server.cc
src/client/: CMakeLists.txt  main.cc
src/core/: CMakeLists.txt  common.h  core.cc  core.h  error.cc  error.h  protocol.cc  protocol.h  result.h  spsc_channel.h  tiny_json.cc  tiny_json.h  utils.cc  utils.h  utils_linux.h  (+1 more)
src/server/contents/: CMakeLists.txt  battle.cc  battle.h  battle_event_loop_linux.cc  battle_event_loop_linux.h  common.h  lobby.cc  lobby.h  lobby_event_loop_linux.cc  lobby_event_loop_linux.h
src/server/engine/: CMakeLists.txt  common.cc  common.h  config.cc  config.h  engine.cc  engine.h  engine_linux.cc  engine_linux.h  event_loop.cc  event_loop.h  event_loop_handler.h  event_loop_linux.cc  event_loop_linux.h  file_descriptor_linux.cc  file_descriptor_linux.h  linux.cc  linux.h  mail_center.cc  mail_center.h  main_event_loop_hander.cc  main_event_loop_handler.h  main_event_loop_handler_builder.cc  main_event_loop_handler_builder.h  main_event_loop_handler_linux.cc  main_event_loop_handler_linux.h  main_event_loop_linux.cc  main_event_loop_linux.h  options.cc  options.h  session.h  session_event_loop_handler.cc  session_event_loop_handler.h  session_service.cc  session_service.h  socket.h  socket_event_loop_handler.cc  socket_event_loop_handler.h  utils_linux.cc  utils_linux.h
(+180 files in other folders)
